--- a/views/admin/homeDashboard.ejs
+++ b/views/admin/homeDashboard.ejs
@@ -1,17 +1,7 @@
 <div class="d-xl-flex justify-content-between align-items-start">
-  <h2 class="text-dark font-weight-bold mb-2">Overview dashboard</h2>
+  <h2 class="text-dark font-weight-bold mb-2">صفحه اصلی</h2>
   <div class="d-sm-flex justify-content-xl-between align-items-center mb-2">
-    <div class="btn-group bg-white p-3" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-link text-light py-0 border-right">
-        7 Days
-      </button>
-      <button type="button" class="btn btn-link text-dark py-0 border-right">
-        1 Month
-      </button>
-      <button type="button" class="btn btn-link text-light py-0">
-        3 Month
-      </button>
-    </div>
+
     <div class="dropdown ml-0 ml-md-4 mt-2 mt-lg-0">
       <button class="btn bg-white dropdown-toggle p-3 d-flex align-items-center" type="button" id="dropdownMenuButton1"
         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
