--- a/views/admin/includes/navbar.ejs
+++ b/views/admin/includes/navbar.ejs
@@ -5,10 +5,10 @@
     class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"
   >
     <a class="navbar-brand brand-logo" href="/dashboard"
-      ><h1 class="text-white">MNews</h1></a
+      ><h1 class="text-white">پنل مدیریت</h1></a
     >
     <a class="navbar-brand brand-logo-mini" href="/dashboard"
-      ><p class="text-white">MN</p></a
+      ><p class="text-white">AP</p></a
     >
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -29,7 +29,7 @@
           <input
             type="text"
             class="form-control bg-transparent border-0"
-            placeholder="Search products"
+            placeholder="جستجو"
           />
         </div>
       </form>
@@ -73,7 +73,10 @@
           aria-expanded="false"
         >
           <div class="nav-profile-img">
-            <img src="assets/images/faces/face28.png" alt="image" />
+            <img
+              src="https://social-auction.com/userimagesnamed/1"
+              alt="image"
+            />
           </div>
           <div class="nav-profile-text">
             <p class="mb-1 text-black"><%= fullname %></p>
@@ -87,7 +90,7 @@
           <div class="p-3 text-center bg-primary">
             <img
               class="img-avatar img-avatar48 img-avatar-thumb"
-              src="assets/images/faces/face28.png"
+              src="https://social-auction.com/userimagesnamed/1"
               alt=""
             />
           </div>
