--- a/views/admin/includes/sidebar.ejs
+++ b/views/admin/includes/sidebar.ejs
@@ -1,10 +1,10 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
-    <li class="nav-item nav-category">Main</li>
+    <li class="nav-item nav-category">منو</li>
     <li class="nav-item">
       <a class="nav-link" href="/dashboard">
         <span class="icon-bg"><i class="mdi mdi-cube menu-icon"></i></span>
-        <span class="menu-title">Dashboard</span>
+        <span class="menu-title">داشبورد</span>
       </a>
     </li>
     <li class="nav-item">
@@ -18,7 +18,7 @@
         <span class="icon-bg"
           ><i class="mdi mdi-file-document-box menu-icon"></i
         ></span>
-        <span class="menu-title">Blog</span>
+        <span class="menu-title">وبلاگ</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="ui-basic">
@@ -26,118 +26,228 @@
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/add-post">Create Post</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post-news">ساخت پست</a>
+          </li>
         </ul>
       </div>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="../icons/mdi.html">
-        <span class="icon-bg"><i class="mdi mdi-contacts menu-icon"></i></span>
-        <span class="menu-title">Icons</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="../forms/basic_elements.html">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-category"
+        aria-expanded="false"
+        aria-controls="ui-category"
+      >
         <span class="icon-bg"
-          ><i class="mdi mdi-format-list-bulleted menu-icon"></i
+          ><i class="mdi mdi-file-document-box menu-icon"></i
         ></span>
-        <span class="menu-title">Forms</span>
+        <span class="menu-title">دسته بندی </span>
+        <i class="menu-arrow"></i>
       </a>
+      <div class="collapse" id="ui-category">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">محلات بابلسر</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">بازار بابلسر</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">اماکن تاریخی</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">اماکن تفریحی</a>
+          </li>
+        </ul>
+      </div>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link" href="../charts/chartjs.html">
-        <span class="icon-bg"><i class="mdi mdi-chart-bar menu-icon"></i></span>
-        <span class="menu-title">Charts</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="../tables/basic-table.html">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-org-dolat"
+        aria-expanded="false"
+        aria-controls="ui-org-dolat"
+      >
         <span class="icon-bg"
-          ><i class="mdi mdi-table-large menu-icon"></i
+          ><i class="mdi mdi-file-document-box menu-icon"></i
         ></span>
-        <span class="menu-title">Tables</span>
+        <span class="menu-title">ارگان های دولتی</span>
+        <i class="menu-arrow"></i>
       </a>
+      <div class="collapse" id="ui-org-dolat">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
+    </li>
+
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-mrsm"
+        aria-expanded="false"
+        aria-controls="ui-mrsm"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">مراسمات</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-mrsm">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
     </li>
     <li class="nav-item">
       <a
         class="nav-link"
         data-toggle="collapse"
-        href="#auth"
+        href="#ui-mahal"
         aria-expanded="false"
-        aria-controls="auth"
+        aria-controls="ui-mahal"
       >
-        <span class="icon-bg"><i class="mdi mdi-lock menu-icon"></i></span>
-        <span class="menu-title">User Pages</span>
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">محلات </span>
         <i class="menu-arrow"></i>
       </a>
-      <div class="collapse" id="auth">
+      <div class="collapse" id="ui-mahal">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="blank-page.html"> Blank Page </a>
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html"> Login </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="register.html"> Register </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="error-404.html"> 404 </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="error-500.html"> 500 </a>
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
           </li>
         </ul>
       </div>
     </li>
+
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-bazar"
+        aria-expanded="false"
+        aria-controls="ui-bazar"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">بازار </span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-bazar">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-akn-dolat"
+        aria-expanded="false"
+        aria-controls="ui-akn-dolat"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">اماکن تاریخی </span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-akn-dolat">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-amkn-tafrihi"
+        aria-expanded="false"
+        aria-controls="ui-amkn-tafrihi"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">اماکن تفریحی </span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-amkn-tafrihi">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-akhbar"
+        aria-expanded="false"
+        aria-controls="ui-akhbar"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">اخبار</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-akhbar">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">تمام صفحات</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">ساخت صفحه</a>
+          </li>
+        </ul>
+      </div>
+    </li>
+
     <li class="nav-item documentation-link">
       <a class="nav-link" href="/" target="_blank">
         <span class="icon-bg">
           <i class="mdi mdi-file-document-box menu-icon"></i>
         </span>
-        <span class="menu-title">WEBSITE W-BLOG</span>
+        <span class="menu-title">سایت</span>
       </a>
-    </li>
-    <li class="nav-item sidebar-user-actions">
-      <div class="user-details">
-        <div class="d-flex justify-content-between align-items-center">
-          <div>
-            <div class="d-flex align-items-center">
-              <div class="sidebar-profile-img">
-                <img src="assets/images/faces/face28.png" alt="image" />
-              </div>
-              <div class="sidebar-profile-text">
-                <p class="mb-1">Henry Klein</p>
-              </div>
-            </div>
-          </div>
-          <div class="badge badge-danger">3</div>
-        </div>
-      </div>
-    </li>
-    <li class="nav-item sidebar-user-actions">
-      <div class="sidebar-user-menu">
-        <a href="#" class="nav-link"
-          ><i class="mdi mdi-settings menu-icon"></i>
-          <span class="menu-title">Settings</span>
-        </a>
-      </div>
-    </li>
-    <li class="nav-item sidebar-user-actions">
-      <div class="sidebar-user-menu">
-        <a href="#" class="nav-link"
-          ><i class="mdi mdi-speedometer menu-icon"></i>
-          <span class="menu-title">Take Tour</span></a
-        >
-      </div>
-    </li>
-    <li class="nav-item sidebar-user-actions">
-      <div class="sidebar-user-menu">
-        <a href="#" class="nav-link"
-          ><i class="mdi mdi-logout menu-icon"></i>
-          <span class="menu-title">Log Out</span></a
-        >
-      </div>
     </li>
   </ul>
 </nav>
