--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
 
     <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
   </head>
-  <body>
+  <body class="rtl">
     <div class="container-scroller">
       <!-- partial:../partials/_navbar.html -->
       <%- include('../admin/includes/navbar.ejs') %>
@@ -56,16 +56,7 @@
               >
                 <span
                   class="text-muted d-block text-center text-sm-left d-sm-inline-block"
-                  >Copyright © bootstrapdash.com 2020</span
-                >
-                <span
-                  class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"
-                >
-                  Free
-                  <a href="../../index.htm" target="_blank"
-                    >Bootstrap .. templates</a
-                  >
-                  from Bootstrapdash.com</span
+                  >Copyright © Ali khodaverdi 2022</span
                 >
               </div>
             </div>
