--- a/views/admin/includes/header.ejs
+++ b/views/admin/includes/header.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title><%= pageTitle  %> </title>
+    <title><%= pageTitle %></title>
     <!-- plugins:css -->
     <link
       rel="stylesheet"
@@ -17,7 +17,10 @@
       rel="stylesheet"
       href="dashboard/assets/vendors/flag-icon-css/css/flag-icon.min.css"
     />
-    <link rel="stylesheet" href="dashboard/assets/vendors/css/vendor.bundle.base.css" />
+    <link
+      rel="stylesheet"
+      href="dashboard/assets/vendors/css/vendor.bundle.base.css"
+    />
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link
@@ -32,7 +35,10 @@
     <!-- inject:css -->
     <!-- endinject -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="dashboard/assets/css/style.css" />
-    <!-- End layout styles -->
-    <link rel="shortcut icon" href="dashboard/assets/images/favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/rastikerdar/shabnam-font@v[X.Y.Z]/dist/font-face.css"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
+</html>
