--- a/views/admin/includes/sidebar.ejs
+++ b/views/admin/includes/sidebar.ejs
@@ -241,6 +241,39 @@
       </div>
     </li>
 
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        data-toggle="collapse"
+        href="#ui-option"
+        aria-expanded="false"
+        aria-controls="ui-option"
+      >
+        <span class="icon-bg"
+          ><i class="mdi mdi-file-document-box menu-icon"></i
+        ></span>
+        <span class="menu-title">تنظیمات</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="ui-option">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post">سربرگ سایت</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post"> ساخت وضعیت</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post-news"
+              >منو ها و ساخت منو</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-post-news">تگ ها</a>
+          </li>
+        </ul>
+      </div>
+    </li>
     <li class="nav-item documentation-link">
       <a class="nav-link" href="/" target="_blank">
         <span class="icon-bg">
