--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,14 @@
             <img src="/blog/assets/img/main-news/main-news-1.jpg" alt="image" />
           </a>
           <div class="news-content">
-            <div class="tag">World news</div>
+            <div class="tag">جدید</div>
             <h3>
               <a href="#"
-                >Speech to the nation on the current situation and the warning
-                of coronavirus</a
-              >
+                >لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+                استفاده از طراحان گرافیک است
+              </a>
             </h3>
-            <span><a href="#">Walters</a> / 28 September, 2021</span>
+            <span><a href="#">Walters</a> / 14 September, 2021</span>
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
       <div class="col-lg-8">
         <div class="most-popular-news">
           <div class="section-title">
-            <h2>Most popular</h2>
+            <h2>محبوب ترین ها</h2>
           </div>
           <div class="row">
             <div class="col-lg-6">
