--- a/views/layouts/masterLayouts.ejs
+++ b/views/layouts/masterLayouts.ejs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/blog/assets/css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="/blog/assets/css/magnific-popup.min.css" />
     <link rel="stylesheet" href="/blog/assets/css/nice-select.min.css" />
-    <link rel="stylesheet" href="/blog/assets/css/style.css" />
+    <link rel="stylesheet" href="/blog/assets/css/style-my.css" />
     <link rel="stylesheet" href="/blog/assets/css/responsive.css" />
     <link rel="stylesheet" href="/blog/assets/css/rtl.css" />
 
@@ -88,10 +88,8 @@
     </div>
 
     <!-- navbar -->
-    <%- include('../includes/blog/navbar.ejs') %>
-    
-    <%- body %>
-    
+    <%- include('../includes/blog/navbar.ejs') %> <%- body %>
+
     <section class="footer-area pt-100 pb-70">
       <div class="container">
         <div class="row">
