--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -34,7 +34,7 @@
       href="../../dashboard/assets/images/favicon.png"
     />
   </head>
-  <body>
+  <body class="rtl">
     <div class="container-scroller">
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div
@@ -47,23 +47,23 @@
                   <h1 class="display-1 mb-0">404</h1>
                 </div>
                 <div class="col-lg-6 error-page-divider text-lg-left pl-lg-4">
-                  <h2>SORRY!</h2>
-                  <h3 class="font-weight-light">
-                    The page you’re looking for was not found.
+                  <h2 class="rtl">خطا!</h2>
+                  <h3 class="font-weight-light rtl">
+                    صفحه مورد نظر شما یافت نشد.
                   </h3>
                 </div>
               </div>
               <div class="row mt-5">
                 <div class="col-12 text-center mt-xl-2">
                   <a class="text-white font-weight-medium" href="/"
-                    >Back to home</a
+                    >بازگشت به صفحه اصلی</a
                   >
                 </div>
               </div>
               <div class="row mt-5">
                 <div class="col-12 mt-xl-2">
                   <p class="text-white font-weight-medium text-center">
-                    Copyright &copy; 2023 All rights reserved.
+                    Copyright &copy; 2023 All khodaverdi reserved.
                   </p>
                 </div>
               </div>
