--- a/views/admin/includes/sidebar.ejs
+++ b/views/admin/includes/sidebar.ejs
@@ -18,7 +18,7 @@
         <span class="icon-bg"
           ><i class="mdi mdi-file-document-box menu-icon"></i
         ></span>
-        <span class="menu-title">وبلاگ</span>
+        <span class="menu-title">نوشته ها</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="ui-basic">
@@ -29,6 +29,10 @@
 
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/add-post-news">ساخت پست</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/add-article">ساخت مقاله</a>
           </li>
         </ul>
       </div>
