--- a/views/admin/includes/sidebar.ejs
+++ b/views/admin/includes/sidebar.ejs
@@ -11,9 +11,9 @@
       <a
         class="nav-link"
         data-toggle="collapse"
-        href="#ui-basic"
+        href="#post"
         aria-expanded="false"
-        aria-controls="ui-basic"
+        aria-controls="post"
       >
         <span class="icon-bg"
           ><i class="mdi mdi-file-document-box menu-icon"></i
@@ -21,7 +21,7 @@
         <span class="menu-title">نوشته ها</span>
         <i class="menu-arrow"></i>
       </a>
-      <div class="collapse" id="ui-basic">
+      <div class="collapse" id="post">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/add-post">Create Post</a>
@@ -42,29 +42,20 @@
       <a
         class="nav-link"
         data-toggle="collapse"
-        href="#ui-category"
+        href="#auth"
         aria-expanded="false"
-        aria-controls="ui-category"
+        aria-controls="auth"
       >
-        <span class="icon-bg"
-          ><i class="mdi mdi-file-document-box menu-icon"></i
-        ></span>
+        <span class="icon-bg"><i class="mdi mdi-lock menu-icon"></i></span>
         <span class="menu-title">دسته بندی </span>
         <i class="menu-arrow"></i>
       </a>
-      <div class="collapse" id="ui-category">
+      <div class="collapse" id="auth">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="/dashboard/add-post">محلات بابلسر</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dashboard/add-post">بازار بابلسر</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dashboard/add-post">اماکن تاریخی</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/dashboard/add-post">اماکن تفریحی</a>
+            <a class="nav-link" href="/dashboard/categories/">
+              ساخت دسته بندی</a
+            >
           </li>
         </ul>
       </div>
