--- a/views/admin/categories/_form_fields.ejs
+++ b/views/admin/categories/_form_fields.ejs
@@ -1,14 +1,14 @@
 <div class="form-group">
   <label for="name">نام دسته بندی</label>
   <input
-    value="<%= category.name %>"
+    value="<%= category.title %>"
     type="text"
     class="form-control"
-    id="name"
-    name="name"
+    id="title"
+    name="title"
   />
 </div>
-<div class="form-group">
+<!-- <div class="form-group">
   <label for="name">slug</label>
   <input
     value="<%= category.name %>"
@@ -17,7 +17,7 @@
     id="slug"
     name="slug"
   />
-</div>
+</div> -->
 
 <button type="submit" class="btn btn-primary mr-2">Submit</button>
 <button class="btn btn-light">Cancel</button>
