--- a/views/admin/includes/navbar.ejs
+++ b/views/admin/includes/navbar.ejs
@@ -79,7 +79,7 @@
             />
           </div>
           <div class="nav-profile-text">
-            <p class="mb-1 text-black"><%= fullname %></p>
+            <p class="mb-1 text-black"><%= %></p>
           </div>
         </a>
         <div
