--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Inverse table</h4>
-            <p class="card-description">All post <code><%= fullname  %> </code></p>
+            <p class="card-description">All post <code> </code></p>
             <table class="table table-dark">
                 <thead>
                     <tr>
@@ -14,6 +14,7 @@
                 </thead>
                 <tbody>
                     <% for(let article of articles) {%>
+
                         <tr>
                             <td>1</td>
                             <td>
@@ -24,19 +25,19 @@
                                 <a href="/articles/<% article._id %>" class="text-white">
                                     <%= article.summary %>
                             <td>
-                            <td>
-                                <a href="/articles/<% article._id %>" class="text-white">
-                                    <%= article.description %>
-                            <td>
+
                                 <td>
-                                    <a href="/articles/<% category._id %>" class="text-white">
-                                        <%= category.description %>
+                                    <a href="/dashboard/categories/<%= JSON.parse(JSON.stringify(article.category))?.slug %>" class="text-white">
+                                        <%# console.log(JSON.parse(JSON.stringify(article.category))?.title); %> 
+                                        <%= JSON.parse(JSON.stringify(article.category))?.title %>
                                 <td>
+
                                 <a href="/dashboard/edit-article/<%= article._id %>"
                                     class="btn btn-sm btn-info">ویرایش</a>
                                 <a href="/dashboard/delete-article/<%= article._id %>"
                                     class="btn btn-sm btn-danger">حذف</a>
                             </td>
+                            
                         </tr>
                         <% } %>
                 </tbody>
