--- a/views/admin/articles/_form_fields.ejs
+++ b/views/admin/articles/_form_fields.ejs
@@ -6,6 +6,78 @@
   <label for="name">summary</label>
   <input type="text" class="form-control" id="summary" name="summary" />
 </div>
+
+
+
+
+
+<!-- ################################# -->
+<label for="selectedThumbnail">عکس بند انگشتی</label>
+<div class="input-group mb-3">
+    <input
+        type="file"
+        class="custom-file-input"
+        name="thumbnail"
+        id="selectedThumbnail"
+        aria-describedby="inputGroupFileAddon03"
+    />
+    <label
+        id="thumbStatus"
+        class="custom-file-label"
+        for="inputGroupFile03"
+        >عکس مورد نظر را انتخاب کنید</label
+    >
+</div>
+<div class="input-group mb-3">
+  <div class="input-group-prepend">
+      <button
+          class="btn btn-sm btn-outline-secondary"
+          type="button"
+          id="imageUpload"
+      >
+          آپلود عکس
+      </button>
+  </div>
+  <div class="custom-file">
+      <input
+          type="file"
+          class="custom-file-input"
+          id="selectedImage"
+          
+      />
+      <label
+          id="imageStatus"
+          class="custom-file-label"
+          for="selectedImage"
+      >
+          عکس مورد نظر را انتخاب کنید
+      </label>
+  </div>
+</div>
+
+<div id="progressDiv" style="display: none">
+  <div class="progress">
+      <div
+          id="progressBar"
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuemin="0"
+          aria-valuemax="100"
+      ></div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="form-group">
   <label for="category">Category</label>
   <select class="form-control" name="category" id="">
