--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="/dashboard/assets/vendors/css/vendor.bundle.base.css"
     />
+    <link rel="stylesheet" href="/dashboard/assets/mycss.css" />
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -32,6 +33,7 @@
     <link rel="shortcut icon" href="/dashboard/assets/images/favicon.png" />
 
     <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+
   </head>
   <body class="rtl">
     <div class="container-scroller">
@@ -72,9 +74,9 @@
     <script src="/dashboard/assets/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <% if(path=="/admin/addPost") {%>
+
     <script src="/js/upload.js"></script>
-    <% } %>
+
     <script>
       CKEDITOR.replace("body", {
         language: "fa",
