--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -1,94 +1,81 @@
 <!DOCTYPE html>
 <html lang="fa">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title><%= pageTitle %></title>
-    <!-- plugins:css -->
-    <link
-      rel="stylesheet"
-      href="/dashboard/assets/vendors/mdi/css/materialdesignicons.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="/dashboard/assets/vendors/flag-icon-css/css/flag-icon.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="/dashboard/assets/vendors/css/vendor.bundle.base.css"
-    />
-    <link rel="stylesheet" href="/dashboard/assets/mycss.css" />
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="/dashboard/assets/css/style.css" />
-    <!-- End layout styles -->
-    <link rel="shortcut icon" href="/dashboard/assets/images/favicon.png" />
 
-    <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title><%= pageTitle %></title>
+  <!-- plugins:css -->
+  <link rel="stylesheet" href="/dashboard/assets/vendors/mdi/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" href="/dashboard/assets/vendors/flag-icon-css/css/flag-icon.min.css" />
+  <link rel="stylesheet" href="/dashboard/assets/vendors/css/vendor.bundle.base.css" />
+  <link rel="stylesheet" href="/dashboard/assets/mycss.css" />
+  <!-- endinject -->
+  <!-- Plugin css for this page -->
+  <!-- End plugin css for this page -->
+  <!-- inject:css -->
+  <!-- endinject -->
+  <!-- Layout styles -->
+  <link rel="stylesheet" href="/dashboard/assets/css/style.css" />
+  <!-- End layout styles -->
+  <link rel="shortcut icon" href="/dashboard/assets/images/favicon.png" />
 
-  </head>
-  <body class="rtl">
-    <div class="container-scroller">
-      <!-- partial:../partials/_navbar.html -->
-      <%- include('../admin/includes/navbar.ejs') %>
+  <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
+
+</head>
+
+<body class="rtl">
+  <div class="container-scroller">
+    <!-- partial:../partials/_navbar.html -->
+    <%- include('../admin/includes/navbar.ejs') %>
+
+    <!-- partial -->
+    <div class="container-fluid page-body-wrapper">
+      <!-- partial:../partials/_sidebar.html -->
+      <%- include('../admin/includes/sidebar.ejs') %>
 
       <!-- partial -->
-      <div class="container-fluid page-body-wrapper">
-        <!-- partial:../partials/_sidebar.html -->
-        <%- include('../admin/includes/sidebar.ejs') %>
+      <div class="main-panel">
+        <div class="content-wrapper"><%-body %></div>
+        <!-- content-wrapper ends -->
 
-        <!-- partial -->
-        <div class="main-panel">
-          <div class="content-wrapper"><%-body %></div>
-          <!-- content-wrapper ends -->
-
-          <!-- partial:../partials/_footer.html -->
-          <footer class="footer">
-            <div class="footer-inner-wraper">
-              <div
-                class="d-sm-flex justify-content-center justify-content-sm-between"
-              >
-                <span
-                  class="text-muted d-block text-center text-sm-left d-sm-inline-block"
-                  >Copyright © Ali khodaverdi 2022</span
-                >
-              </div>
+        <!-- partial:../partials/_footer.html -->
+        <footer class="footer">
+          <div class="footer-inner-wraper">
+            <div class="d-sm-flex justify-content-center justify-content-sm-between">
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © Ali khodaverdi
+                2022</span>
             </div>
-          </footer>
-          <!-- partial -->
-        </div>
-        <!-- main-panel ends -->
+          </div>
+        </footer>
+        <!-- partial -->
       </div>
-      <!-- page-body-wrapper ends -->
+      <!-- main-panel ends -->
     </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="/dashboard/assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
+    <!-- page-body-wrapper ends -->
+  </div>
+  <!-- container-scroller -->
+  <!-- plugins:js -->
+  <script src="/dashboard/assets/vendors/js/vendor.bundle.base.js"></script>
+  <!-- endinject -->
+  <!-- Plugin js for this page -->
 
-    <script src="/js/upload.js"></script>
+  <script src="/js/upload.js"></script>
 
-    <script>
-      CKEDITOR.replace("body", {
-        language: "fa",
-      });
-    </script>
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="/dashboard/assets/js/off-canvas.js"></script>
-    <script src="/dashboard/assets/js/hoverable-collapse.js"></script>
-    <script src="/dashboard/assets/js/misc.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <!-- End custom js for this page -->
-  </body>
+  <script>
+    CKEDITOR.replace("body", {
+      language: "fa",
+    });
+  </script>
+  <!-- End plugin js for this page -->
+  <!-- inject:js -->
+  <script src="/dashboard/assets/js/off-canvas.js"></script>
+  <script src="/dashboard/assets/js/hoverable-collapse.js"></script>
+  <script src="/dashboard/assets/js/misc.js"></script>
+  <!-- endinject -->
+  <!-- Custom js for this page -->
+  <!-- End custom js for this page -->
+</body>
+
 </html>
