--- a/views/admin/articles/show.ejs
+++ b/views/admin/articles/show.ejs
@@ -10,6 +10,7 @@
                         <th>عنوان</th>
                         <th>تاریخ</th>
                         <th>وضعیت</th>
+                        <th>دسته بندی</th>
                     </tr>
                 </thead>
                 <tbody>
