--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -43,8 +43,9 @@
                         </tr>
                         <% } %>
                 </tbody>
-            </table>
 
+            </table>
+            <%- include('../../includes/pagination.ejs')  %> 
         </div>
 
     </div>
