--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,9 @@
           </div>
 
           <div class="col-lg-6 col-md-6 col-sm-6 lost-your-password">
-            <a href="#" class="lost-your-password">پسورد فراموش شد؟</a>
+            <a href="/users/forget-password" class="lost-your-password"
+              >پسورد فراموش شد؟</a
+            >
           </div>
         </div>
 
